<resources>
    <string name="app_name">BMICalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="bmi_height">身長</string>
    <string name="bmi_weight">体重</string>
    <string name="bmi_result">結果</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="default_num">0</string>
    <string name="coron">：</string>
    <string name="bmi">BMI</string>
    <string name="your_body_type">あなたの体型は</string>
    <string name="desu">です</string>
    <string name="standard_weight">標準体重は</string>
    <string name="history">History</string>
    <string name="back">Back</string>
    <string name="date">日付</string>
    <string name="past">過去の</string>
</resources>
