<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:onClick="onClick"
        android:text="Result" />

    <TextView
        android:id="@+id/txtHight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/bmi_height"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/txtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtHight"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/bmi_weight"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtHight"
        android:layout_alignEnd="@+id/button_result"
        android:layout_alignRight="@+id/button_result"
        android:layout_alignTop="@+id/txtHight"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_toRightOf="@+id/txtHight"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <EditText
        android:id="@+id/editWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txtWeight"
        android:layout_alignEnd="@+id/editHeight"
        android:layout_alignLeft="@+id/editHeight"
        android:layout_alignRight="@+id/editHeight"
        android:layout_alignStart="@+id/editHeight"
        android:layout_alignTop="@+id/txtWeight"
        android:ems="10"
        android:inputType="number|numberDecimal" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editHeight"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_toEndOf="@+id/editHeight"
        android:layout_toRightOf="@+id/editHeight"
        android:text="@string/cm"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editWeight"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:text="@string/kg"
        android:textSize="30dp" />

    <Button
        android:id="@+id/buttonHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickHistory"
        android:text="@string/history"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/button_result"
        android:layout_alignStart="@+id/button_result"
        android:layout_marginBottom="56dp" />

</RelativeLayout>
